--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^15.0.0",
+    "@ckeditor/ckeditor5-vue": "^1.0.0",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "express": "^4.17.1",
