--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "postinstall": "if test \"$NODE_ENV\" = \"production\" ; then npm run build ; fi "
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^15.0.0",
-    "@ckeditor/ckeditor5-vue": "^1.0.0",
+    "ant-design-vue": "^1.4.10",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "express": "^4.17.1",
+    "plyr": "^3.5.6",
+    "v-click-outside": "^3.0.0",
+    "v-selectmenu": "^2.0.2",
     "vue": "^2.6.10",
+    "vue-froala-wysiwyg": "^3.1.0",
+    "vue-multiselect": "^2.1.6",
+    "vue-navigation-bar": "^2.0.0",
+    "vue-plyr": "^6.0.4",
     "vue-router": "^3.0.3",
+    "vue-simple-uploader": "^0.7.4",
+    "vuejs-paginate": "^2.1.0",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
