--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "express": "^4.17.1",
+    "mini-toastr": "^0.8.1",
     "plyr": "^3.5.6",
+    "toastr": "^2.1.4",
     "v-click-outside": "^3.0.0",
     "v-selectmenu": "^2.0.2",
     "vue": "^2.6.10",
     "vue-froala-wysiwyg": "^3.1.0",
     "vue-multiselect": "^2.1.6",
     "vue-navigation-bar": "^2.0.0",
+    "vue-notifications": "^1.0.2",
     "vue-plyr": "^6.0.4",
     "vue-router": "^3.0.3",
     "vue-simple-uploader": "^0.7.4",
