--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "express": "^4.17.1",
-    "mini-toastr": "^0.8.1",
     "plyr": "^3.5.6",
     "toastr": "^2.1.4",
     "v-click-outside": "^3.0.0",
+    "v-credit-card": "^1.2.4",
     "v-selectmenu": "^2.0.2",
     "vue": "^2.6.10",
     "vue-froala-wysiwyg": "^3.1.0",
@@ -27,6 +27,7 @@
     "vue-router": "^3.0.3",
     "vue-simple-uploader": "^0.7.4",
     "vuejs-paginate": "^2.1.0",
+    "vuelidate": "^0.7.5",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
