--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-plyr": "^6.0.4",
     "vue-router": "^3.0.3",
     "vue-simple-uploader": "^0.7.4",
+    "vue-tabs-component": "^1.5.0",
     "vuejs-paginate": "^2.1.0",
     "vuelidate": "^0.7.5",
     "vuex": "^3.1.1"
