--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-router": "^3.0.3",
     "vue-simple-uploader": "^0.7.4",
     "vue-tabs-component": "^1.5.0",
+    "vuedraggable": "^2.23.2",
     "vuejs-paginate": "^2.1.0",
     "vuelidate": "^0.7.5",
     "vuex": "^3.1.1"
