--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "v-selectmenu": "^2.0.2",
     "vue": "^2.6.10",
     "vue-froala-wysiwyg": "^3.1.0",
+    "vue-i18n": "^8.15.4",
     "vue-multiselect": "^2.1.6",
     "vue-navigation-bar": "^2.0.0",
     "vue-notifications": "^1.0.2",
