--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-VUE_APP_API=https://edu-marketplace1.herokuapp.com
+#VUE_APP_API=https://edu-marketplace1.herokuapp.com
+VUE_APP_API=http://10.10.4.27:8081
