--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "express": "^4.17.1",
+    "filepond": "^4.12.2",
+    "filepond-plugin-file-validate-type": "^1.2.4",
+    "filepond-plugin-image-preview": "^4.6.1",
     "plyr": "^3.5.6",
     "toastr": "^2.1.4",
     "v-click-outside": "^3.0.0",
@@ -20,6 +23,7 @@
     "v-selectmenu": "^2.0.2",
     "vue": "^2.6.10",
     "vue-agile": "^1.0.11",
+    "vue-filepond": "^6.0.2",
     "vue-froala-wysiwyg": "^3.1.0",
     "vue-i18n": "^8.15.4",
     "vue-multiselect": "^2.1.6",
@@ -29,6 +33,7 @@
     "vue-router": "^3.0.3",
     "vue-simple-uploader": "^0.7.4",
     "vue-tabs-component": "^1.5.0",
+    "vue2-transitions": "^0.3.0",
     "vuedraggable": "^2.23.2",
     "vuejs-paginate": "^2.1.0",
     "vuelidate": "^0.7.5",
