--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "filepond-plugin-file-validate-type": "^1.2.4",
     "filepond-plugin-image-preview": "^4.6.1",
     "plyr": "^3.5.6",
+    "sweet-modal-vue": "^2.0.0",
     "toastr": "^2.1.4",
     "v-click-outside": "^3.0.0",
     "v-credit-card": "^1.2.4",
@@ -32,6 +33,7 @@
     "vue-plyr": "^6.0.4",
     "vue-router": "^3.0.3",
     "vue-simple-uploader": "^0.7.4",
+    "vue-star-rating": "^1.6.1",
     "vue-tabs-component": "^1.5.0",
     "vue2-transitions": "^0.3.0",
     "vuedraggable": "^2.23.2",
@@ -46,6 +48,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
